Fix scrollbar register page

--- a/src/frontend/src/components/Auth.css
+++ b/src/frontend/src/components/Auth.css
@@ -1,10 +1,7 @@
-body {
-  overflow-y: hidden;
-}
 .auth-container {
   display: flex;
   align-items: center;
-  min-height: calc(100vh - 61px);
+  min-height: calc(100vh - 58px);
   background-color: #f5f5f5;
 }
 
@@ -20,11 +17,12 @@ body {
 .auth-container .picture-container {
   width: 55%;
   position: relative;
+  display: flex;
 }
 
 .auth-container .picture-container .background-image{
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 58px);
   filter: brightness(0.7);
 }
 
